k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: atmos
  labels:
    app.kubernetes.io/part-of: atmos
